syntax = "proto3";

package grpc.health.v1;

message HealthRequest {
    string service = 1;
}

message HealthResponse {
    enum HealthStatus {
        UNKNOWN = 0;
        HEALTHY = 1;
        DEGRADED = 2;
        UNHEALTHY = 3;
    }

    HealthStatus status = 1;
}

service Health {
    rpc Check(HealthRequest) returns (HealthResponse);
}
